--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+body{
+  margin: 0px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .App {
-  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .App-logo {
